libimsg-openbsd (1.3) UNRELEASED; urgency=medium

  * 
  * initial version
  * fix man pages location
  * add missed functions
  * correct build dependencies
  * reset errno on linux
  * disable getdtablecount.c as it dowsn't work when chroot() is used
  * alter packaging; cleanup
  * add debian/triggers

 -- Maxim Zakharov <5158255+Maxime2@users.noreply.github.com>  Tue, 02 Jun 2020 19:45:44 +1000