@@ -4,7 +4,7 @@ LIB=	imsg-openbsd
 LIBDIR=	/usr/local/lib
 MANDIR=	/usr/local/man
 MAN=	imsg_init.3
-SRCS=	imsg.c imsg-buffer.c freezero.c recallocarray.c
+SRCS=	imsg.c imsg-buffer.c recallocarray.c
 HDRS=	imsg.h
 HDRDIR=	/usr/local/include
 DEBUG=	-O0 -g
