@@ -9,5 +9,6 @@ libimsg-openbsd (1.3) UNRELEASED; urgency=medium
   * disable getdtablecount.c as it dowsn't work when chroot() is used
   * alter packaging; cleanup
   * add debian/triggers
+  * remake freezero() into a macro
 
- -- Maxim Zakharov <5158255+Maxime2@users.noreply.github.com>  Tue, 02 Jun 2020 19:45:44 +1000
+ -- Maxim Zakharov <5158255+Maxime2@users.noreply.github.com>  Wed, 02 Sep 2020 12:31:02 +1000
